# program-cryptosfinders

./: .env  .gitignore  Anchor.toml  Cargo.toml  PROJECT_DESCRIPTION.md  package.json
anchor_project/: Anchor.toml  Cargo.toml  README.md
anchor_project/programs/tip_jar/: Cargo.toml
anchor_project/programs/tip_jar/src/: lib.rs
anchor_project/tip_jar/: Cargo.toml
anchor_project/tip_jar/src/: lib.rs
frontend/: .env.local  README.md  next.config.cjs  package.json  page.tsx  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/idl/: tip_jar.json
tests/: tip_jar.test.ts
