[package]
name = "tip_jar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = []
idl-build = ["anchor-lang/idl-build"]

# optional stubs to silence “unexpected cfg” warnings:

anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.31.1"


